--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         method: "POST",
         headers: {
           "Content-Type": "application/json",
-          "Authorization": "Bearer YOUR_OPENAI_API_KEY"
+          "Authorization": "Bearer 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"
         },
         body: JSON.stringify({
           model: "gpt-3.5-turbo",
