--- a/index.html
+++ b/index.html
@@ -1,116 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Caption Generator</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f9fafb;
-      color: #222;
-      padding: 20px;
-      max-width: 600px;
-      margin: auto;
-    }
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-    label {
-      font-weight: bold;
-      margin-top: 15px;
-      display: block;
-    }
-    input, select, textarea, button {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-    }
-    button {
-      background-color: #0066ff;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      margin-top: 15px;
-    }
-    button:hover {
-      background-color: #0044cc;
-    }
-    #output {
-      background: white;
-      padding: 15px;
-      border-radius: 10px;
-      margin-top: 20px;
-    }
-  </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>AI Captions Generator</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>AI Caption Generator</h1>
+  <main class="container">
+    <header class="header">
+      <h1 class="logo">AI Captions</h1>
+      <p class="tagline">Generate scroll-stopping captions — fast.</p>
+    </header>
 
-  <p>Generate viral captions for your business instantly using AI.</p>
+    <section class="card input-card">
+      <div class="field">
+        <label for="niche">Choose niche</label>
+        <select id="niche">
+          <option value="general">General</option>
+          <option value="space">Space Facts</option>
+          <option value="marketing">Marketing</option>
+          <option value="fitness">Fitness</option>
+          <option value="food">Food</option>
+          <option value="fashion">Fashion</option>
+          <option value="funny">Funny / Meme</option>
+          <option value="motivation">Motivation</option>
+        </select>
+      </div>
 
-  <label>Niche</label>
-  <select id="niche">
-    <option>Fashion</option>
-    <option>Food / Restaurant</option>
-    <option>Fitness</option>
-    <option>Real Estate</option>
-    <option>Crypto / Forex</option>
-    <option>Tech</option>
-    <option>Other</option>
-  </select>
+      <div class="field">
+        <label for="topic">Topic / keywords</label>
+        <input id="topic" placeholder="e.g. lunar eclipse, keto recipes, gym tips" />
+      </div>
 
-  <label>Business Description</label>
-  <textarea id="business" placeholder="Describe what you sell..."></textarea>
+      <div class="row">
+        <button id="generate" class="btn primary">Generate Captions</button>
+        <button id="clear" class="btn">Clear</button>
+      </div>
 
-  <label>Tone of Voice</label>
-  <select id="tone">
-    <option>Professional</option>
-    <option>Funny</option>
-    <option>Luxury / Classy</option>
-    <option>Friendly</option>
-    <option>Bold / Confident</option>
-  </select>
+      <p id="help" class="help">Tip: Add a short keyword + choose niche for best results.</p>
+    </section>
 
-  <label>Number of Captions</label>
-  <input type="number" id="count" placeholder="e.g. 10" />
+    <section class="card results-card" aria-live="polite">
+      <div class="results-header">
+        <h2>Generated Captions</h2>
+        <button id="copyAll" class="btn small">Copy All</button>
+      </div>
 
-  <button onclick="generateCaptions()">Generate Captions</button>
+      <div id="loading" class="loading hidden">
+        <div class="spinner"></div>
+        <span>Generating captions…</span>
+      </div>
 
-  <div id="output"></div>
+      <div id="results" class="results"></div>
+      <p class="muted">This version is frontend-only (mock AI). You can later replace it with a real API call.</p>
+    </section>
 
-  <script>
-    async function generateCaptions() {
-      const niche = document.getElementById("niche").value;
-      const business = document.getElementById("business").value;
-      const tone = document.getElementById("tone").value;
-      const count = document.getElementById("count").value;
-      const output = document.getElementById("output");
+    <footer class="footer">
+      <small>Built with Replit • Frontend-only</small>
+    </footer>
+  </main>
 
-      output.innerHTML = "Generating captions... ⏳";
-
-      const prompt = `Act as a professional social media manager. Generate ${count} engaging Instagram captions for a ${niche} business that ${business}. The tone should be ${tone}. Each caption should include emojis and relevant hashtags.`;
-
-      const response = await fetch("https://api.openai.com/v1/chat/completions", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": "Bearer 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"
-        },
-        body: JSON.stringify({
-          model: "gpt-3.5-turbo",
-          messages: [{ role: "user", content: prompt }]
-        })
-      });
-
-      const data = await response.json();
-      const captions = data.choices[0].message.content;
-
-      output.innerHTML = `<h3>Your Captions:</h3><pre>${captions}</pre>`;
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
